fix: remove packageId from GymSubscription; update related logic and DTOs